fixed margin error on smaller screens

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ footer{
 .container{
     margin-left:auto;
     margin-right:auto;
-    margin-top:120px;
+    margin-top:3em;
     padding:48px;
     background-color: black;
     border-style: solid;
